Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -328,7 +328,8 @@
     <p>※ 그 외 법령의 규정에 의거하거나, 수사 목적으로 법령에 정해진 절차와 방법에 따라 수사기관의 요구가 있는 경우 제공될 수 있습니다.</p>
 
     <h2>5. 개인정보 처리의 위탁</h2>
-    <p>회사는 원활한 HR 시스템 운영 및 유지보수를 위하여 다음과 같이 개인정보 처리 업무를 외부 전문 업체에 위탁하고 있습니다.</p>
+  <p>회사는 HR 시스템의 운영 및 유지보수를 외부 업체에 위탁하지 않으며, 셀트리온제약 내부 IT 담당 부서에서 직접 운영·관리하고 있습니다. 따라서 개인정보 처리 업무를 외부에 위탁하는 사항은 없습니다.</p>
+    <!-- <p>회사는 원활한 HR 시스템 운영 및 유지보수를 위하여 다음과 같이 개인정보 처리 업무를 외부 전문 업체에 위탁하고 있습니다.</p>
     <table>
         <thead>
             <tr>
@@ -347,7 +348,7 @@
             </tr>
         </tbody>
     </table>
-    <p>회사는 위탁계약 체결 시 개인정보 보호법에 따라 위탁업무 수행목적 외 개인정보 처리금지, 기술적·관리적 보호조치, 수탁자에 대한 관리·감독 등을 명확히 규정하고 있습니다.</p>
+    <p>회사는 위탁계약 체결 시 개인정보 보호법에 따라 위탁업무 수행목적 외 개인정보 처리금지, 기술적·관리적 보호조치, 수탁자에 대한 관리·감독 등을 명확히 규정하고 있습니다.</p> -->
 
     <h2>6. 정보주체의 권리·의무 및 행사방법</h2>
     <p>임직원은 본인의 개인정보에 대해 언제든지 열람, 정정, 삭제, 처리정지 요구를 할 수 있습니다. 다만, HR 시스템 내의 인사평가 결과 등 회사의 고유한 인사권 및 업무 수행에 현저한 지장을 초래하는 경우에는 일부 권리 행사가 제한될 수 있습니다.</p>
@@ -406,3 +407,4 @@
   </div>
 </body>
 </html>
+
